roadmap: R521 gains a mechanized-detection section
Folds an empirical static-analysis pass over the generated tree into the
existing hand-authored audit. Error Prone 2.50.0 runs clean over
graphitron-sakila-example's generated sources on JDK 25 and reports 413
warnings; the table records the 2026-07-28 baseline and maps each check onto
this item's existing sections. UnusedMethod independently finds the
graphitronContext cluster the original audit located by hashing copies, and
MutablePublicArray on ErrorMappings is new: generated code hands consumers
mutable public arrays.

Records one false positive on purpose. ModifyCollectionInEnhancedForLoop fires
on TenantConnections, where the field is a ConcurrentHashMap and the removal is
deliberate arbitration, so the pass is advisory and each check earns gate
status on its own evidence.

Also pins down why the 13 dangling generated {@link}s survive an existing gate:
graphitron-sakila-example sets maven.javadoc.skip, so the parent's reference
gate never sees the generated tree. The opt-out is load-bearing for its stated
reason, so the fix is a check that runs against generated output on its own
terms.

Notes that the header census has already drifted (691 files reads 692 today),
which is the argument for a regenerated view over prose. Status stays Backlog.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01C6k825phuT4VRsjNeL3GXt